# autoware.universe

./: .cspell.json  .pre-commit-config.yaml  build_depends_humble.repos  build_depends_nightly.repos  codecov.yaml  mkdocs.yaml  packages_above.repos  versions.json
common/autoware_agnocast_wrapper/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
common/autoware_agnocast_wrapper/cmake/: agnocast_wrapper_config_extras.cmake
common/autoware_boundary_departure_checker/: CHANGELOG.rst  CMakeLists.txt  package.xml
common/autoware_boundary_departure_checker/src/: boundary_departure_checker.cpp  boundary_departure_checker_abnormality.cpp  conversion.cpp  steering_abnormality_utils.cpp  utils.cpp
common/autoware_boundary_departure_checker/test/: test_calc_max_search_length_for_boundaries.cpp  test_create_vehicle_footprints.cpp  test_create_vehicle_passing_areas.cpp  test_cut_trajectory.cpp  test_resample_trajectory.cpp
e2e/autoware_tensorrt_vad/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
e2e/autoware_tensorrt_vad/config/: object_class_remapper_carla_tiny.param.yaml  vad_carla_tiny.param.yaml
e2e/autoware_tensorrt_vad/docs/: design.md  design_vad_interface.md  design_vad_model.md  design_vad_node.md
e2e/autoware_tensorrt_vad/lib/: coordinate_transformer.cpp  synchronization_strategy.cpp  vad_config.cpp
e2e/autoware_tensorrt_vad/schema/: tensorrt_vad.schema.json
e2e/autoware_tensorrt_vad/src/: converter.hpp  coordinate_transformer.hpp  data_types.hpp  ros_vad_logger.hpp  synchronization_strategy.hpp  vad_config.hpp  vad_interface.hpp  vad_interface_config.hpp  vad_model.hpp
examples/autoware_diagnostic_graph_test_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
examples/autoware_diagnostic_graph_test_examples/data/: graph.yaml
examples/autoware_diagnostic_graph_test_examples/test/: example.cpp
perception/autoware_bevfusion/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_bevfusion/config/: bevfusion_camera_lidar.param.yaml  bevfusion_lidar.param.yaml  ml_package_bevfusion_lidar.param.yaml
perception/autoware_bevfusion/launch/: bevfusion.launch.xml
perception/autoware_bevfusion/lib/: bevfusion_trt.cpp  detection_class_remapper.cpp  ros_utils.cpp
perception/autoware_bevfusion/schema/: bevfusion.schema.json  common_bevfusion.schema.json  ml_package_bevfusion.schema.json
perception/autoware_bevfusion/src/: bevfusion_node.cpp  bevfusion_node_utils.cpp
perception/autoware_camera_streampetr/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_camera_streampetr/config/: tensorrt_stream_petr.param.yaml
perception/autoware_camera_streampetr/launch/: tensorrt_stream_petr.launch.xml  tensorrt_stream_petr_compressed.launch.xml
perception/autoware_camera_streampetr/src/: node.cpp
perception/autoware_image_object_locator/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_image_object_locator/config/: bbox_object_locator.param.yaml
perception/autoware_image_object_locator/docs/: bbox-object-locator.md
perception/autoware_image_object_locator/launch/: bbox_object_locator.launch.xml
perception/autoware_image_object_locator/schema/: bbox_object_locator.schema.json
perception/autoware_image_object_locator/src/: bbox_object_locator_node.cpp  bbox_object_locator_node.hpp
perception/autoware_lidar_frnet/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_lidar_frnet/config/: diagnostics_frnet.param.yaml  frnet.param.yaml  ml_package_frnet.param.yaml
perception/autoware_lidar_frnet/launch/: lidar_frnet.launch.xml
perception/autoware_lidar_frnet/lib/: lidar_frnet.cpp
perception/autoware_lidar_frnet/schema/: diagnostics_frnet.schema.json  frnet.schema.json  ml_package_frnet.schema.json
perception/autoware_lidar_frnet/src/: lidar_frnet_node.cpp
perception/autoware_multi_object_tracker/: CHANGELOG.rst  CMakeLists.txt  README.md  models.md  package.xml
perception/autoware_multi_object_tracker/config/: data_association_matrix.param.yaml  multi_object_tracker_node.param.yaml
perception/autoware_multi_object_tracker/launch/: multi_object_tracker.launch.xml
perception/autoware_multi_object_tracker/lib/: odometry.cpp
perception/autoware_multi_object_tracker/schema/: data_association_matrix.schema.json  input_channels.schema.json  multi_object_tracker_node.schema.json
perception/autoware_multi_object_tracker/src/: multi_object_tracker_node.cpp  multi_object_tracker_node.hpp
perception/autoware_multi_object_tracker/test/: test_bench.cpp  test_bench.hpp  test_bench_association.cpp  test_bench_association.hpp  test_multi_object_tracker.cpp  test_utils.cpp  test_utils.hpp
perception/autoware_object_sorter/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_object_sorter/config/: detected_object_sorter.param.yaml  tracked_object_sorter.param.yaml
perception/autoware_object_sorter/launch/: detected_object_sorter.launch.xml  tracked_object_sorter.launch.xml
perception/autoware_object_sorter/schema/: object_sorter.schema.json
perception/autoware_predicted_path_postprocessor/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_ptv3/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_simpl_prediction/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_simple_object_merger/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_tensorrt_bevformer/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_tensorrt_plugins/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_traffic_light_category_merger/: CHANGELOG.rst  CMakeLists.txt  package.xml
perception/autoware_traffic_light_map_based_detector/: CHANGELOG.rst  CMakeLists.txt  package.xml
perception/autoware_traffic_light_multi_camera_fusion/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
planning/autoware_diffusion_planner/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
(+46063 files in other folders)
