<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_agnocast_wrapper</name>
  <version>0.43.0</version>
  <description>Wrapper macros for Agnocast (true zero-copy communication library)</description>
  <maintainer email="sykwer@gmail.com">Takahiro Ishikawa-Aso</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <build_depend>agnocastlib</build_depend>
  <build_depend>rclcpp</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
