<?xml version="1.0"?>
<package format="3">
  <name>autoware_camera_streampetr</name>
  <version>0.49.0</version>
  <description>autoware_camera_streampetr</description>
  <maintainer email="samratthapa120@gmail.com">samrat</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_cuda_dependency_meta</depend>
  <depend>autoware_cuda_utils</depend>
  <depend>autoware_object_recognition_utils</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_tensorrt_common</depend>
  <depend>autoware_utils</depend>
  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
