<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_lidar_frnet</name>
  <version>0.0.0</version>
  <description>LiDAR segmentation based on FRNet</description>
  <maintainer email="amadeusz.szymko.2@tier4.jp">Amadeusz Szymko</maintainer>
  <license>Apache License 2.0</license>
  <author email="amadeusz.szymko.2@tier4.jp">Amadeusz Szymko</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_cuda_dependency_meta</depend>
  <depend>autoware_cuda_utils</depend>
  <depend>autoware_object_recognition_utils</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_point_types</depend>
  <depend>autoware_tensorrt_common</depend>
  <depend>autoware_utils</depend>
  <depend>diagnostic_updater</depend>
  <depend>pcl_ros</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
