<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_object_sorter</name>
  <version>0.46.0</version>
  <description>autoware_object_sorter</description>
  <maintainer email="yoshi.ri@tier4.jp">Yoshi Ri</maintainer>
  <maintainer email="taekjin.lee@tier4.jp">Taekjin Lee</maintainer>
  <maintainer email="lei.gu@tier4.jp">Lei Gu</maintainer>
  <maintainer email="masaki.baba@tier4.jp">Masaki Baba</maintainer>
  <license>Apache License 2.0</license>
  <author email="masaki.baba@tier4.jp">Masaki Baba</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_perception_msgs</depend>
  <depend>autoware_utils</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
