<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_ptv3</name>
  <version>0.44.0</version>
  <description>The autoware_ptv3 package</description>
  <maintainer email="kenzo.lobos@tier4.jp">Kenzo Lobos-Tsunekawa</maintainer>
  <maintainer email="amadeusz.szymko.2@tier4.jp">Amadeusz Szymko</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_cuda_dependency_meta</depend>
  <depend>autoware_cuda_utils</depend>
  <depend>autoware_object_recognition_utils</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_point_types</depend>
  <depend>autoware_tensorrt_common</depend>
  <depend>autoware_utils</depend>
  <depend>cuda_blackboard</depend>
  <depend>launch_ros</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2_sensor_msgs</depend>

  <exec_depend>autoware_tensorrt_plugins</exec_depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
