<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_simpl_prediction</name>
  <version>0.47.0</version>
  <description>The ROS 2 package for SIMPL.</description>
  <maintainer email="kotaro.uetake@tier4.jp">Kotaro Uetake</maintainer>
  <maintainer email="yoshi.ri@tier4.jp">Yoshi Ri</maintainer>
  <maintainer email="taekjin.lee@tier4.jp">Taekjin Lee</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>
  <buildtool_depend>cudnn_cmake_module</buildtool_depend>
  <buildtool_depend>tensorrt_cmake_module</buildtool_depend>

  <buildtool_export_depend>cudnn_cmake_module</buildtool_export_depend>
  <buildtool_export_depend>tensorrt_cmake_module</buildtool_export_depend>

  <depend>autoware_cuda_utils</depend>
  <depend>autoware_internal_debug_msgs</depend>
  <depend>autoware_lanelet2_extension</depend>
  <depend>autoware_map_msgs</depend>
  <depend>autoware_object_recognition_utils</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_tensorrt_common</depend>
  <depend>autoware_utils</depend>
  <depend>autoware_utils_debug</depend>
  <depend>autoware_utils_geometry</depend>
  <depend>autoware_utils_system</depend>
  <depend>geometry_msgs</depend>
  <depend>lanelet2_core</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
