<?xml version="1.0"?>
<package format="3">
  <name>autoware_simple_object_merger</name>
  <version>0.46.0</version>
  <description>autoware_simple_object_merger</description>
  <maintainer email="yoshi.ri@tier4.jp">Yoshi Ri</maintainer>
  <maintainer email="taekjin.lee@tier4.jp">Taekjin Lee</maintainer>

  <license>Apache License 2.0</license>
  <author email="satoshi.tanaka@tier4.jp">Satoshi Tanaka</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_perception_msgs</depend>
  <depend>autoware_test_utils</depend>
  <depend>autoware_utils</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <build_depend>autoware_cmake</build_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
